# bayesian-inference-with-explicit-and-implicit-prior-knowledge

./: .gitignore  Battery_APF.py  Battery_Figures.py  Battery_PGAS.py  Battery_Simulation.py  EMPS_Figures.py  EMPS_Simulation.py  GP_Test.py  LICENCE.md  Publication_Figures.py  README.md  SingleMassOscillator_APF.py  SingleMassOscillator_EnKF.py  SingleMassOscillator_EnKFGP.py  SingleMassOscillator_EnKF_GP.py  SingleMassOscillator_Figures.py  SingleMassOscillator_GHKF.py  SingleMassOscillator_GPPF_Berntorp.py  SingleMassOscillator_KalmanFilter.py  SingleMassOscillator_PGAS.py  SingleMassOscillator_PGAS_weight_only.py  SingleMassOscillator_Simulation.py  Toy_Example_Simulation.py  VehicleParaEstimation.py  VehicleSimulation_APF.py  VehicleSimulation_EnKF_GP.py  VehicleSimulation_Figures.py  VehicleSimulation_PGAS.py  VehicleSimulation_Simulation.py  Vehicle_Test.py  environment.yaml  plotting.py  pyproject.toml
NeurIPS-2019-parameter-elimination-in-particle-gibbs-sampling-Supplemental/: .gitignore
PythonCode/: .gitignore
neurips2019-parameter-elimination-master/: .gitignore
plots/: .gitignore  Battery.mat  EMPS.mat  SingleMassOscillator.mat  Vehicle.mat
src/: .gitignore  Algorithm1.py  Algorithm2.py  Algorithm3.py  Algorithms.py  BasisFunctions.py  Battery.py  BayesianInferrence.py  EMPS.py  Filtering.py  KalmanFilter.py  PGAS.py  Plotting.py  Publication_Plotting.py  RGP.py  SingleMassOscillator.py  SingleMassOscillatorPlotting.py  StateSpaceModel.py  Toy_Example.py  Vehicle.py  VehiclePlotting.py  __init__.py  conditional_smc.py  sampling.py
(+12 files in other folders)
